# bazel-example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
