load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")

ts_library(
    name = "sources",
    srcs = ["//:index.ts"],
    deps = ["@npm//tslib", "@npm//@types/node"],
    tsconfig = "//:tsconfig.json",
)

nodejs_binary(
    name = "bin",
    data = [":sources"],
    entry_point = ":index.ts"
)
